# StockScanner

./: .gitignore  Config.py  GitPath.bat  PACKAGE_TESTING_INSTRUCTIONS.txt  Prepare_WatchList.py  README.md  README_SETUP.md  RUN_SCANNER_COMMANDS.txt  STABLE_RELEASE_1_0_0.txt  ScoreConfigParm_Arun.py  Test.py  charts.py  download_nyse.bat  download_nyse.py  indicators.py  logger.py  market_data.py  nyse_universe.py  pyproject.toml  ranking.py  relative_strength.py  report.py  requirements.txt  run.bat  run.cmd  run.ps1  scanner.py  scanner_backup_4_4.py  scanner_parallel_backup.py  scoring.py  signals.py  trade_plan.py  watchlist.py
.github/workflows/: scan.yml
reports/: StockScanner_2026-07-11.xlsx  StockScanner_2026-07-13.xlsx
stockscanner/: cli.py  config.py  indicators.py  market_data.py  ranking.py  relative_strength.py  report.py  scan.py  scoring.py  signals.py  trade_plan.py  universe.py  watchlist.py
tests/: test_scan.py
watchlists/: nyse_stocks.csv  watchlist.csv
